syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.mibanco.novedades.es";
option java_outer_classname = "ConsultaNovedadesGrpc";

package ConsultaNovedadesGrpc;

message GetNovedadByDocumentRequest {
  string id = 1;
  string numeroDocumento = 2;
  string codigoNovedad =3;
  string descripcionNovedad = 4;
  string fechaNovedad = 5;
}

message NovedadResponse{
  GetNovedadByDocumentRequest novedadCDTDigital = 1;
}
service ConsultaNovedadGrpc {
  rpc consultarNovedad(GetNovedadByDocumentRequest) returns (NovedadResponse);
}